Added local storage and json file to deploy.

--- a/style.css
+++ b/style.css
@@ -1,7 +1,12 @@
+* {
+    list-style-type: none;
+}
+
 body {
     margin: 0;
     padding: 10px;
     font-family: Arial, Helvetica, sans-serif;
+    min-width: 400px;
 }
 
 
@@ -20,5 +25,18 @@ button {
     padding: 10px 20px;
     border: none;
     font-weight: bold;
-
 }
+
+ul {
+    margin-top: 15px;
+    padding-left: 0;
+}
+
+a {
+    color: #f00dbf;
+}
+
+li {
+    margin-top: 5px;
+}
+
